kubernetes/generatedManifests/test/infrastructure/nginx-ingress/1-manifest/networking.k8s.io_v1-ingress-applications-oyelowo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/ssl-redirect":"false","nginx.ingress.kubernetes.io/use-regex":"true"},"labels":{"app.kubernetes.io/managed-by":"pulumi"},"name":"oyelowo-ingress","namespace":"applications"},"spec":{"ingressClassName":"nginx","rules":[{"host":"localhost:8080","http":{"paths":[{"backend":{"service":{"name":"graphql-mongo","port":{"number":8000}}},"path":"/api","pathType":"Prefix"},{"backend":{"servi [...]
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: oyelowo-ingress
  namespace: applications
spec:
  ingressClassName: nginx
  rules:
  - host: localhost:8080
    http:
      paths:
      - backend:
          service:
            name: graphql-mongo
            port:
              number: 8000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: react-web
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls: []
