kubernetes/generatedManifests/test/infrastructure/nginx-ingress/1-manifest/v1-configmap-default-nginx-ingress-controller-default-backend.yaml
apiVersion: v1
data:
  defaultBackend.conf: |-
    location /healthz {
      return 200;
    }

    location / {
      return 404;
    }
kind: ConfigMap
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"defaultBackend.conf":"location /healthz {\n  return 200;\n}\n\nlocation / {\n  return 404;\n}"},"kind":"ConfigMap","metadata":{"annotations":{"linkerd.io/inject":"enabled"},"labels":{"app.kubernetes.io/component":"default-backend","app.kubernetes.io/instance":"nginx-ingress-controller","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"nginx-ingress-controller","helm.sh/chart":"nginx-ingress-controller-9.3.18"},"name":"nginx-ingress-controller-def [...]
    linkerd.io/inject: enabled
  labels:
    app.kubernetes.io/component: default-backend
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: nginx-ingress-controller
    helm.sh/chart: nginx-ingress-controller-9.3.18
  name: nginx-ingress-controller-default-backend
  namespace: default
